cmake_minimum_required(VERSION 3.16)
project(pathfinder)
set(EXECUTABLE_OUTPUT_PATH build)
set(LIBRARY_OUTPUT_PATH build)
include_directories(../../core/include)
add_library(cyk SHARED ../../core/src/functions.cpp)
add_executable(core ../../core/src/CYKonGraph.cpp)
target_link_libraries(core PRIVATE cyk)
add_executable(code2graph code/code2graph.cpp)